--- a/Index.html
+++ b/Index.html
@@ -3,17 +3,13 @@
 <html>
 
 <head>
-<title>Tennis</title>
+<title>Website</title>
 </head>
 
 <body style="background-color:powderblue;">
 
-<h1>Tennis<h1>
+<h1>Website<h1>
 
-
-<a href="https://olympics.com/en/news/tennis-rules-regulations-how-to-play-basics">
-<a href="C:\Users\devyani.dagwar\OneDrive - CDMN\Computer Technology\Year 9\HTML learning\Resources for website challenge">
-<img src="C:\Users\devyani.dagwar\OneDrive - CDMN\Computer Technology\Year 9\HTML learning\Resources for website challenge" alt="How to play" style="width:200px;height:300px;"></a>
 
 
 </body>
